XWIKI-12718: Introduce a parameter for "xpage=plain" to display the title along with the plain content

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/displaycontent.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/displaycontent.vm
@@ -4,11 +4,19 @@
 ## * htmlHeaderAndFooter: if true, display the HTML headers and footers
 ## 
 ############################################################################
+$services.progress.pushLevel(3)
+$services.progress.startStep('Display the header')
 #if($request.htmlHeaderAndFooter == 'true')
   #template("htmlheader.vm")
   #template("header.vm")
 #end
+$services.progress.endStep()
+$services.progress.startStep('Display the content')
 #template('rendercontent.vm')
+$services.progress.endStep()
+$services.progress.startStep('Display the footer')
 #if($request.htmlHeaderAndFooter == 'true')
   #template("htmlfooter.vm")
 #end
+$services.progress.endStep()
+$services.progress.popLevel()
