--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/contentview.vm
@@ -7,24 +7,7 @@ $services.progress.pushLevel(4)
 ## Compute the content to display 
 ## -------------------------------
 $services.progress.startStep('Compute the content to display')
-## Honor the syntax if it's passed in the request.
-#try()
-  #set($outputSyntax = $xwiki.getAvailableRendererSyntax($request.outputSyntax, $request.outputSyntaxVersion))
-  #if ($outputSyntax)
-    ## If the passed syntax is not an HTML-compatible syntax we need to HTML-escape it so that it can be
-    ## displayed fine in HTML (since at the point this vm file is called we're already inside an HTML page with
-    ## panels on the side, header, etc).
-    #set($syntaxType = $outputSyntax.type.toIdString())
-    #if (($syntaxType == "xhtml") || ($syntaxType == "html"))
-      #set ($renderedContent = $tdoc.getRenderedContent($outputSyntax))
-    #else
-      ## Make sure to print correctly the result when it's not HTML
-      #set ($renderedContent = "<pre>$escapetool.html($tdoc.getRenderedContent($outputSyntax))</pre>")
-    #end
-  #else
-    #set ($renderedContent = $tdoc.getRenderedContent())
-  #end
-#end
+#template("contentvars.vm")
 $services.progress.endStep()
 
 ## ----------------------------------------------------------------------------
@@ -37,7 +20,7 @@ $services.progress.endStep()
 ## ----------------------------
 ## Display the title
 ## ----------------------------
-$services.progress.startStep('Display the title')
+$services.progress.startStep('Display the title and content')
 <div class="xcontent">
   #template('contentheader.vm')
   ## --------------------------------------------------------------------------
