XWIKI-12719: Using the $displayMainMenu variable breaks the content menu buttons

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_content.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_content.vm
@@ -10,6 +10,7 @@
 ## Display the 4 menus
 ##
 #if ($displayContentMenu)
+#template("menus_macros.vm")
 <div id="contentmenu" class="pull-right actionmenu">
   #if ($displayEditMenu && $hasEdit && !$isReadOnly)
     #displayEditMenu()
