XWIKI-12720: When $displayContentMenu is set, the template displayed when a document doesn't exist shouldn't display a content menu XWIKI-12719: Using the $displayMainMenu variable breaks the content menu buttons

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/docdoesnotexist.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/docdoesnotexist.vm
@@ -8,9 +8,11 @@
   $response.setStatus(404)
   #template("startpage.vm")
   <div class="main">
-  <div id="contentmenu" class="actionmenu">
-    #template("menus_content.vm")
-  </div>
+  #if($displayContentMenu)
+    <div id="contentmenu" class="actionmenu">
+      #template("menus_content.vm")
+    </div>
+  #end
   <div id="mainContentArea">
   #if($xwiki.exists("XWiki.DocumentDoesNotExist"))
     $xwiki.includeForm("XWiki.DocumentDoesNotExist",false)
