--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_content.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_content.vm
@@ -1,3 +1,4 @@
+#template("menus_macros.vm")
 #set ($canShare = $canView && $xwiki.exists('XWiki.SharePage') && !$isGuest)
 <div id="contentmenu" class="pull-right actionmenu">
 #if($hasEdit && !$isReadOnly)
