XWIKI-12718: Introduce a parameter for "xpage=plain" to display the title along with the plain content * Fixed regression

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/rendercontent.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/rendercontent.vm
@@ -16,6 +16,8 @@
   $services.progress.pushLevel(1)
 #end
 $services.progress.startStep('Compute the content to display')
+## Make sure we don't escape the content since we want HTML to be rendered
+#set ($escapeContent = false)
 #template("contentvars.vm")
 $services.progress.endStep()
 #if ($displayTitle)
