--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/contentvars.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/contentvars.vm
@@ -8,11 +8,13 @@
     ## If the passed syntax is not an HTML-compatible syntax we need to HTML-escape it so that it can be
     ## displayed fine in HTML (since at the point this vm file is called we're already inside an HTML page with
     ## panels on the side, header, etc).
+    ## That's unless the caller has explicitly asked to not escape the content (this is done for example when calling
+    ## get.vm in order to get proper XML).
     #set($syntaxType = $outputSyntax.type.toIdString())
-    #if (($syntaxType == "xhtml") || ($syntaxType == "html"))
+    #if (($syntaxType == "xhtml") || ($syntaxType == "html") || !$escapeContent)
       #set ($renderedContent = $tdoc.getRenderedContent($outputSyntax))
     #else
-      ## Make sure to print correctly the result when it's not HTML
+      ## Make sure to print correctly the result when it's not HTML,
       #set ($renderedContent = "<pre>$escapetool.html($tdoc.getRenderedContent($outputSyntax))</pre>")
     #end
   #else
