XWIKI-12720: When $displayContentMenu is set, the template displayed when a document doesn't exist shouldn't display a content menu XWIKI-12719: Using the $displayMainMenu variable breaks the content menu buttons * Improve slightly performance by executing the menus_macros.vm only once. A better implementation would be to have a cache in the Template Manager code to ensure that VMs are loaded and executed only once.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_macros.vm
@@ -1,3 +1,9 @@
+### Ensure this template is only called once (for performance reasons), since it's called from several places
+#if ($hasMenuMacrosBeenCalled)
+  #break
+#else
+  #set ($hasMenuMacrosBeenCalled = true)
+#end
 ###
 ###    GLOBALS
 ###
