Revert "XWIKI-12727: Links to sections for some categories of the wiki admin broken"
This reverts commit fea3adaf377c422e6f8444ef1fda292db17d2858.
Actually we do not need to html escape the url, because the {{html}}
macro does that for us (more precisely the html cleanup in the macro)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/macros.vm
@@ -573,7 +573,7 @@ function (row, i, table) {
   #if ($name == '')
     #set ($name = $services.localization.render("$!{options.translationPrefix}${item.id}"))
   #end
-  $level (% id="vertical-menu-${item.id}" class="${class}" %){{html}}<a #if ("$!{item.url}" != '')href="$escapetool.xml($item.url)"#{end}>#if($item.glyphicon)#glyphicon($item.glyphicon) #end$name</a>{{/html}}
+  $level (% id="vertical-menu-${item.id}" class="${class}" %){{html}}<a #if ("$!{item.url}" != '')href="$item.url"#{end}>#if($item.glyphicon)#glyphicon($item.glyphicon) #end$name</a>{{/html}}
   #if ($hasChildren)
     #set ($children = [])
     #sortCollectionOfMapsByField($item.children, 'order', 99999, 'asc', $children)
