--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/getdocuments.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/getdocuments.vm
@@ -21,11 +21,23 @@ $response.setContentType("application/json")
 #if ("$!request.get('doc.location')" != '')
   ## Location is a special case, that we need to handle separatly.
   ## It is actually not a real field, but a special request on doc.fullName, more user-friendly.
-  #set ($whereQueryPart = "${whereQueryPart} AND LOWER(doc.fullName) LIKE ?")
-  ## Because the user might filter with "/" as separator we replace that by "%", because
-  ## it could be "." (the space separator) or "/" (as it is in the document name).
-  #set ($location = $request.get('doc.location').replaceAll('/', '%').toLowerCase())
-  #set ($discard = $queryParams.add("%${location}%"))
+  #set ($whereQueryPart = "${whereQueryPart} AND LOWER(doc.fullName) LIKE LOWER(?) ESCAPE '◊'")
+  ## Note: the "_" character has a special meaning in standard SQL servers: "Matches a single character".
+  ## However, it is not what the user expects (e.g. http://jira.xwiki.org/browse/XWIKI-12608).
+  ## As a consequence, we must escape this character.
+  ## See https://blogs.oracle.com/JPQL01/entry/how_to_use_like_expression to understand why we use the special
+  ## clause 'escape' above. We cannot simply replace all '_' by '\_' because '\' is escaped too afterwards.
+  ## We use the '◊' character for the escaping because it's pretty uncommon and there is a low chance that a 
+  ## page name contains this character.
+  #set ($locationFilterValue = $request.get('doc.location').replaceAll('_', '◊_'))
+  ## Because the user might filter with "/" as separator we replace that by "%", because it could be "." 
+  ## (the space separator) or "/" (as it is in the document name).
+  ## In addition, using "%" (any sequence of character) instead of "_" (any single character) gives the ability
+  ## to filter on different levels:
+  ##   e.g. filtering on "Blog/Intro" will return "Blog.BlogIntroduction".
+  ##        On the other hand, it will also returns: "BlogForIntrospection", which might be unexpected.
+  #set ($locationFilterValue = $locationFilterValue.replaceAll('/', '%'))
+  #set ($discard = $queryParams.add("%${locationFilterValue}%"))
 #end
 ##
 ## ORDER
