XWIKI-12430: Enhance the breadcrumbs with tree navigation * aria-expanded="true" is also used by the tree so I had to modify flamingo.js a bit * add a new 'treeNavigation' parameter to the #hierarchy macro and use it in hierarchy.vm * use Bootstrap's dropdown component to enhance the breadcrumbs with tree navigation

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy.vm
@@ -41,7 +41,7 @@
       ##
       ## Default mode: display the hierarchy for the current page
       ##
-      #hierarchy($NULL {'id': 'hierarchy', 'limit': 5})
+      #hierarchy($NULL {'id': 'hierarchy', 'limit': 5, 'treeNavigation': true})
     #end
   #end
 #end
