--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_reference.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_reference.vm
@@ -5,8 +5,37 @@
 ## Initially made to be used in an AJAX call when generating the location preview of a new page.
 ##
 #template('hierarchy_macros.vm')
+##
+## Parse the document reference from the request (default to current)
+##
 #set ($documentReference = $NULL)
 #if ("$!request.reference" != '')
   #set ($documentReference = $services.model.resolveDocument($request.reference))
 #end
-#hierarchy($documentReference)
+##
+## Parse the options from the request
+##
+#set ($options = {})
+#if ("$!request.displayTitle" != '')
+  #set ($displayTitle = ($request.displayTitle == 'true'))
+  #set ($discard = $options.put('displayTitle', $displayTitle))
+#end
+#if ("$!request.excludeSelf" != '')
+  #set ($excludeSelf = ($request.excludeSelf == 'true'))
+  #set ($discard = $options.put('excludeSelf', $excludeSelf))
+#end
+#if ("$!request.id" != '')
+  #set($discard = $options.put('id', $escapetool.xml($request.id)))
+#end
+#if ("$!request.limit" != '')
+  #set ($limit = $mathtool.toInteger($request.limit))
+  #set ($discard = $options.put('limit', $limit))
+#end
+#if ("$!request.local" != '')
+  #set ($local = ($request.local == 'true'))
+  #set ($discard = $options.put('local', $local))
+#end
+##
+## Display the hierarchy
+##
+#hierarchy($documentReference, $options)
