--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_reference.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_reference.vm
@@ -35,6 +35,9 @@
   #set ($local = ($request.local == 'true'))
   #set ($discard = $options.put('local', $local))
 #end
+#if ("$!request.treeNavigation" != '')
+  #set ($discard = $options.put('treeNavigation', $request.treeNavigation.equals('true')))
+#end
 ##
 ## Display the hierarchy
 ##
