--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
@@ -177,11 +177,13 @@
     ## FIXME: Make sure the tree shows entities of type $root.type and $openTo.type
     #set ($url = $xwiki.getURL('XWiki.DocumentTree', 'get', $escapetool.url({
       'outputSyntax': 'plain',
-      'root': $rootId
+      'root': $rootId,
+      'showTranslations': $xwiki.isMultiLingual(),
+      'limit': 10
     })))
     #set ($treeToggle = "<span class='dropdown-toggle' data-toggle='dropdown'>" +
       "$services.icon.renderHTML('caret-down')</span>")
-    #set ($treeElement = "<div class='xtree' data-responsive='true' data-url='$escapetool.xml($url)' " +
+    #set ($treeElement = "<div class='breadcrumb-tree' data-responsive='true' data-url='$escapetool.xml($url)' " +
       "data-openTo='$escapetool.xml($openToId)'></div>")
     #set ($treeNavigation = "$treeToggle<div class='dropdown-menu'>$treeElement</div>")
   #end
