XCOMMONS-874: Verify that WebPreferences page have the correct title XWIKI-12759: Provide a descriptive title for WebPreferences pages

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/admin.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/admin.vm
@@ -45,8 +45,9 @@
 #if ($doc.fullName == $prefsClassName || $doc.name == 'WebPreferences')
   #if (!$doc.getObject($prefsClassName))
     #set ($discard = $doc.newObject($prefsClassName))
-    $!doc.setParent("${doc.space}.WebHome")
+    #set ($discard = $!doc.setParent("${doc.space}.WebHome"))
     #set ($discard = $doc.setHidden(true))
+    #set ($discard = $doc.setTitle($services.localization.render('admin.preferences.title')))
     #set ($discard = $doc.save())
   #end
 #end
