XWIKI-12766: Unchecking "Terminal Page" in the create UI when on a new document creates the wrong document - Added the hidden input that represents the unchecked checkbox.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -249,6 +249,8 @@
             <label for="terminal">
               <input type="checkbox" id="terminal" name="tocreate" value="terminal" #if(!$isSpace)checked="checked"#end/>
               $services.localization.render('core.create.terminal.label')
+              ## Hidden input used to ensure that an unchecked terminal checkbox means non-terminal and that the default is not used by mistake.
+              <input type="hidden" name="tocreate" value="nonterminal" />
             </label>
             <span class="xHint">$services.localization.render('core.create.terminal.hint')</span>
           </dt>
