XWIKI-12276: Add a new 'terminal' xproperty in TemplateProviderClass - Terminal vs non-terminal status is resolved in the create action in 3 main steps: -- 1. Request parameter "tocreate" values "terminal" or "nonterminal" -- 2. Value of the "terminal" property of the template provider specified in the request. --- 2.1 If the template provider does not have a "terminal" property specified, backwards compat mode: ---- the "type" property is inspected: "space" => nonterminal; "page" or NULL => terminal ---- Note: the TemplateProviderClassTemplate's object sets the "terminal" property to "No" to make sure we default to non-terminal documents in the UI, but for backwards compat reasons, we are defaulting to terminal documents in the code, so that we interpret old template providers as creating terminal documents, which was the case in the past. -- 3. Current page --- 3.1 Existing page, defaults to nonterminal --- 3.2 New page ---- 3.2.1 WebHome => nonterminal ---- 3.2.2 Non-WebHome => terminal
- Updated the create UI to (un/)check the terminal checkbox when switching between page types (template providers), based on the value of the "terminal" property.

- Added more unit tests for the create action

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -84,11 +84,21 @@
 ## ---------------------------------------------------------------------------------------------------------
 #macro (displayTypes)
   #if ($template == '')
-    #set($options = [
+    #set ($blankTerminalState = !$isSpace)
+    #set ($options = [
       { 
         'name': $services.localization.render('core.create.type.default'),
         'options': [
-          { 'name': $services.localization.render('core.create.type.blank'), 'value': 'blank', 'description': $services.localization.render('core.create.type.blank.description'), 'icon': 'file-white', 'data': {'type': 'blank'}}
+          {
+            'name': $services.localization.render('core.create.type.blank'),
+            'value': 'blank',
+            'description': $services.localization.render('core.create.type.blank.description'),
+            'icon': 'file-white',
+            'data': {
+              'type': 'blank',
+              'terminal' : "$blankTerminalState"
+            }
+          }
         ]
       }])
     #if ($xwiki.exists($services.model.createDocumentReference('', 'XWiki', 'OfficeImporter')) && "$!services.officemanager.serverState" == 'Connected')
@@ -117,11 +127,36 @@
         #else
           #set($message = $services.localization.render('core.create.template.allowedspaces.inline', [$tpobj.getProperty('name').getValue(), $jsAllowedSpacesArray]))
         #end
+        ## Determine if it's a terminal page template
+        #set ($isTerminalProvider = $tpobj.getValue('terminal'))
+        #if ("$!isTerminalProvider" == '')
+          ## Fall-back on the 'type' property, if available.
+          #set ($type = $tpobj.getValue('type'))
+          #if ($type == 'space')
+            #set ($isTerminalProvider = false)
+          #else
+            ## 'page' or NULL both resolve to true, for backwards compatibility reasons.
+            #set ($isTerminalProvider = true)
+          #end
+        #else
+          #set ($isTerminalProvider = ($isTerminalProvider == 1))
+        #end
         ##
         ## Display the template provider field option in the form.
         ##
         #set ($inputId = "xwiki-create-form-${velocityCount}")
-        #set ($discard = $templateOptions.add({'name': $services.localization.render($tpobj.getProperty('name').value), 'value': "$tpdocRef", 'description': '', 'icon':'file-white', 'data': {'allowed-spaces': $jsAllowedSpacesArray, 'allowed-spaces-message': $message, 'type': 'template'}}))
+        #set ($discard = $templateOptions.add({
+          'name': $services.localization.render($tpobj.getProperty('name').value),
+          'value': "$tpdocRef",
+          'description': '',
+          'icon':'file-white',
+          'data': {
+            'allowed-spaces': $jsAllowedSpacesArray,
+            'allowed-spaces-message': $message,
+            'type': 'template',
+            'terminal' : $isTerminalProvider
+          }
+        }))
       #end
     #end
     <dt><label>$services.localization.render('core.create.type')</label></dt>
