--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_view.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_view.vm
@@ -10,12 +10,12 @@
     ## Right menu
     #xwikitopmenurightstart()
       #displayDrawerActivator()
-      #displaySecureUIX('org.xwiki.platform.topmenu.right')
+      #displaySimpleSecureUIX('org.xwiki.platform.topmenu.right')
     #xwikitopmenurightend()
     
     ## Left menu
     #xwikitopmenuleftstart()
-      #displaySecureUIX('org.xwiki.platform.topmenu.left')
+      #displaySimpleSecureUIX('org.xwiki.platform.topmenu.left')
     #xwikitopmenuleftend()
     
   ## End of Top Menu
